syntax = "proto2";

package sf.solana.block_meta.v1;

message PbAddWhitelistToMarketLayout {
  required string whitelistType = 1;
  repeated uint32 root = 2;
}

message PbInitializeOracleLayout {
  required string oracleAuthority = 1;
  required string oracleInfo = 2;
  required uint64 floor = 3;
}

message PbSetOracleAuthorityLayout {
  required string newOracleAuthority = 1;
}

message PbSetOracleFloorLayout {
  required uint64 newFloor = 1;
}

message Arg {
  required string instruction_type = 1;
  optional PbAddWhitelistToMarketLayout addWhitelistToMarket = 2;
  optional PbInitializeOracleLayout initializeOracle = 3;
  optional PbSetOracleAuthorityLayout setOracleAuthority = 4;
  optional PbSetOracleFloorLayout setOracleFloor = 5;
}

message InputAccounts {
  optional string fraktMarket = 1;
  optional string user = 2;
  optional string admin = 3;
  optional string systemProgram = 4;
  optional string rent = 5;
  optional string whitelistEntry = 6;
  optional string whitelistedAddress = 7;
  optional string oracle = 8;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}